changes with tasks archive edit

--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -29,7 +29,7 @@
                     <div class="task-btns">
                         <button class="edit-btn btn">&#9998;</button>
                         <a class="btn-board" (click)="remove(task.id)">&#10006;</a>
-                        <button class="archive-btn btn">&#9972;</button>
+                        <button class="archive-btn btn">🗃️</button>
                     </div> 
                 </div>
             </div>
@@ -52,19 +52,21 @@
                 (dragstart)="drag($event)" 
                 id="drag1"
                 >
-                    <h3 class="task-title">{{ task.name }}</h3>  
-
-                    <div class="correct" *ngIf="editTask">
+                    <h3 class="{{ (task.isArchived) ? 'done' : '' }}">{{ task.name }}</h3>  
+                    <!-- <form class="correct" 
+                        *ngIf="editTask" 
+                        #editTaskForm="ngForm"
+                        (ngSubmit)="saveEditTask(editTaskForm)"
+                    >
                         <input  #name="ngModel" type="text" name = "name" class="form-controll" [(ngModel)]="task.name" required minlength="2" appFocus
                         >
-                        <button class="save" (click)="saveEditTask()">Save</button>
-                    </div>
-
-
+                        <button class="save">Save</button>
+                    </form> -->
                     <div class="task-btns">
-                        <button class="edit-btn btn" (click)="showEdit()">&#9998;</button>
+                        <!-- <button class="edit-btn btn" (click)="showEdit(task.id)">&#9998;</button> -->
+                        <button class="edit-btn btn">&#9998;</button>
                         <a class="btn-board" (click)="remove(task.id)">&#10006;</a>
-                        <button class="archive-btn btn">&#9972;</button>
+                        <button class="archive-btn btn" (click)="done(task.id)" >🗃️</button>
                     </div> 
                 </div>
             </div>
@@ -82,7 +84,7 @@
             (dragover)="allowDrop($event)"
             >
                 <div class="task"
-                *ngFor="let task of taskService.tasks |  statusPipe:statuses[2] | searchTaskPipe:searchStr |  sortBy:sortByValue"
+                *ngFor="let task of taskService.tasks | statusPipe:statuses[2] | searchTaskPipe:searchStr |  sortBy:sortByValue"
                 draggable="true" 
                 (dragstart)="drag($event)" 
                 id="drag1"
@@ -91,7 +93,7 @@
                     <div class="task-btns">
                         <button class="edit-btn btn" >&#9998;</button>
                         <a class="btn-board" (click)="remove(task.id)">&#10006;</a>
-                        <button class="archive-btn btn">&#9972;</button>
+                        <button class="archive-btn btn">🗃️</button>
                     </div> 
                 </div>
             </div>
